deployment/sleep.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sleep
  annotations:
    ip.brivo.com/address: 52.54.99.179
spec:
  replicas: 0
  selector:
    matchLabels:
      app: sleep
  template:
    metadata:
      labels:
        app: sleep
    spec:
      containers:
      - name: sleep
        image: tutum/curl
        command: ["/bin/sleep","infinity"]
        imagePullPolicy: IfNotPresent
