deployment/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: byoip-mutator
  labels:
    app: byoip-mutator
spec:
  ports:
  - port: 443
    targetPort: 443
  selector:
    app: byoip-mutator
