deployment/sleep-svc.yaml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: sleep
  annotations:
    thingy.brivo.com/testme: thingy.__BRIVOENV__.brivo.com
    # ip.brivo.com/address: "64.35.172.6,64.35.172.7"
  name: sleep
spec:
  ports:
  - name: 80-80
    port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: sleep
  type: ClusterIP
