deployment/validatingwebhook.yaml
apiVersion: admissionregistration.k8s.io/v1beta1
kind: ValidatingWebhookConfiguration
metadata:
  name: byoip-mutator
  labels:
    app: byoip-mutator
webhooks:
  - name: required-labels.brivo.com
    clientConfig:
      service:
        name: byoip-mutator
        namespace: byoip
        path: "/validate"
      caBundle: ${CA_BUNDLE}
    rules:
      - operations: [ "CREATE" ]
        apiGroups: ["apps", ""]
        apiVersions: ["v1"]
        resources: ["deployments","services"]
    namespaceSelector:
      matchLabels:
        byoip-mutator: enabled
